--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "all": "git add . && git commit -m 'bot' && git push -u origin main",
+    "pro": "npm run build && git add dist && git commit -m 'auto-bot' && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "axios": "^0.21.1",
