--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pwa-asset-generator": "^4.1.1",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue3-carousel": "^0.1.27"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
