--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "all": "git add . && git commit -m 'bot' && git push -u origin main",
-    "pro": "npm run build && git add dist && git commit -m 'auto-bot' && git subtree push --prefix dist origin gh-pages"
+    "commit": "git add . && git commit -m 'bot' && git push -u origin main",
+    "submit": "npm run build && git add dist && git commit -m 'auto-bot' && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "axios": "^0.21.1",
