--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "save": "git add . && git commit -m 'bot' && git push -u origin main",
-    "submit": "npm run build && git add dist && git commit -m 'auto-bot' && git subtree push --prefix dist origin gh-pages"
+    "submit": "git push -f https://github.com/ceeioh/ceeioh_page.git  master:gh-pages"
   },
   "dependencies": {
     "axios": "^0.21.1",
